--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
  • Equip Rod from inventory<br>
  • Hold screen 2 seconds to cast<br>
  • Wait for fish<br>
- • Tap fast to catch it<br><br>
+ • A "Press Here" button will spawn randomly<br>
+ • Tap it within 1 second, 10 times to catch the fish<br><br>
 
  🐟 <b>Fish Chances</b><br>
  • Clownfish – ~25%<br>
@@ -342,12 +343,11 @@ buyBait.onclick=()=>{
  alert("Inventory full!");
 };
 
-/* ===== IMPROVED FISHING MECHANIC ===== */
-let holding=false,holdTime=0,fishing=false,taps=0,requiredTaps=0;
+/* ===== REACTION-TIME MINI-GAME FISHING ===== */
+let holding=false, holdTime=0, fishing=false, taps=0, requiredTaps=10, fishButton=null, fishTimer=null;
 
-addEventListener("touchstart",()=>{if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){if(!fishing){holding=true;holdTime=0}}});
-addEventListener("touchend",()=>{holding=false;holdTime=0});
-addEventListener("touchstart",()=>{if(fishing)taps++;});
+addEventListener("touchstart",()=>{if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){if(!fishing){holding=true; holdTime=0}}});
+addEventListener("touchend",()=>{holding=false; holdTime=0});
 
 function randomFish(){
  const r=Math.random();
@@ -367,19 +367,6 @@ function randomFish(){
  return fish;
 }
 
-function getRequiredTaps(fish){
- switch(fish){
-   case "Megalodon": return 25;
-   case "MantaRay": return 15;
-   case "SeaTurtle": return 12;
-   case "Pufferfish": return 10;
-   case "Shark": return 8;
-   case "Tuna": return 6;
-   case "Clownfish": return 5;
-   default: return 6;
- }
-}
-
 function addItem(f){
  for(let i=0;i<inventory.length;i++){
    const {name,count}=parseStack(inventory[i]);
@@ -391,27 +378,69 @@ function addItem(f){
  alert("Inventory full!");
 }
 
+function createFishButton(){
+ if(fishButton) document.body.removeChild(fishButton);
+ fishButton=document.createElement("button");
+ fishButton.textContent="PRESS HERE!";
+ fishButton.style.position="fixed";
+ fishButton.style.zIndex="100";
+ fishButton.style.padding="12px 20px";
+ fishButton.style.fontSize="18px";
+ fishButton.style.borderRadius="8px";
+ fishButton.style.background="yellow";
+ fishButton.style.color="black";
+ const x=Math.random()*(window.innerWidth-150);
+ const y=Math.random()*(window.innerHeight-60);
+ fishButton.style.left=x+"px";
+ fishButton.style.top=y+"px";
+ document.body.appendChild(fishButton);
+}
+
 function startFishing(){
  fishing=true;
  holding=false;
  holdTime=0;
+ taps=0;
  msg.style.display="block";
  msg.textContent="Casting...";
  const castDelay = 1000 + Math.random()*1500;
+
  setTimeout(()=>{
    const fish=randomFish();
-   requiredTaps=getRequiredTaps(fish);
-   taps=0;
-   msg.textContent=fish+"! TAP!";
-   const fishingTimeout=setTimeout(()=>{
+   msg.textContent=fish+"! Catch it by pressing the button!";
+   
+   function failFish(){
+     msg.textContent="Fish escaped!";
+     fishing=false;
+     if(fishButton) document.body.removeChild(fishButton);
+     fishButton=null;
+     clearTimeout(fishTimer);
+     setTimeout(()=>{msg.style.display="none"},2000);
+   }
+
+   function nextTap(){
      if(taps>=requiredTaps){
        msg.textContent="Caught "+fish+"!";
        addItem(fish);
-     }else{
-       msg.textContent="Fish escaped!";
+       fishing=false;
+       if(fishButton) document.body.removeChild(fishButton);
+       fishButton=null;
+       clearTimeout(fishTimer);
+       setTimeout(()=>{msg.style.display="none"},2000);
+       return;
      }
-     setTimeout(()=>{msg.style.display="none"; fishing=false},2000);
-   },5000);
+     createFishButton();
+     fishTimer=setTimeout(failFish,1000);
+     fishButton.onclick=()=>{
+       taps++;
+       clearTimeout(fishTimer);
+       if(fishButton) document.body.removeChild(fishButton);
+       fishButton=null;
+       nextTap();
+     }
+   }
+
+   nextTap();
  }, castDelay);
 }
 
@@ -481,4 +510,3 @@ animate();
 </script>
 </body>
 </html>
-
