--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
  padding:6px 14px;
  font-size:16px;
 }
+
+/* FISH BUTTON */
+.fish-btn{
+ position:fixed;
+ z-index:100;
+ border-radius:50%;
+ padding:20px;
+ font-size:18px;
+ background:gray;
+ color:white;
+ border:none;
+ cursor:pointer;
+ text-align:center;
+ user-select:none;
+}
 </style>
 </head>
 <body>
@@ -115,7 +130,7 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
  • Equip Rod from inventory<br>
  • Hold screen 2 seconds to cast<br>
  • Wait for fish<br>
- • A "Press Here" button will spawn randomly<br>
+ • A circular "Press Here" button will spawn randomly<br>
  • Tap it within 1 second, 10 times to catch the fish<br><br>
 
  🐟 <b>Fish Chances</b><br>
@@ -152,16 +167,14 @@ html,body{margin:0;padding:0;overflow:hidden;background:black;touch-action:none}
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
 <script>
-/* ===== SCENE ===== */
+// ===== SCENE & PLAYER =====
 const scene=new THREE.Scene();
 scene.background=new THREE.Color(0x87CEEB);
-
 const camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,.1,1000);
 const renderer=new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(innerWidth,innerHeight);
 renderer.setPixelRatio(devicePixelRatio);
 document.body.appendChild(renderer.domElement);
-
 scene.add(new THREE.AmbientLight(0xffffff,.7));
 const sun=new THREE.DirectionalLight(0xffffff,1);
 sun.position.set(10,20,10);
@@ -218,7 +231,7 @@ player.add(camera);
 let velocityY=0,grounded=true;
 let yaw=0,pitch=0;
 
-/* CAMERA LOOK */
+// Camera look
 let looking=false,lastX=0,lastY=0;
 addEventListener("touchstart",e=>{
  if(e.target.closest(".slot")||e.target.id==="joystick"||e.target.id==="stick"||e.target.id==="jump"||e.target.id==="book")return;
@@ -236,7 +249,7 @@ addEventListener("touchmove",e=>{
 });
 addEventListener("touchend",()=>looking=false);
 
-/* MOVE */
+// Movement
 let moveX=0,moveZ=0,joy=false,center={};
 joystick.addEventListener("touchstart",()=>{
  joy=true;
@@ -261,123 +274,59 @@ addEventListener("touchend",()=>{
  moveX=moveZ=0;
 });
 
-/* JUMP */
+// Jump
 jump.addEventListener("touchstart",()=>{
  if(grounded){velocityY=.18;grounded=false;}
 });
 
-/* INVENTORY */
+// Inventory
 let money=0;
 const prices={Clownfish:5,Tuna:10,Shark:25,Pufferfish:25,SeaTurtle:50,MantaRay:500,Megalodon:1000};
 const inventory=["Rod","","","","","","","",""];
-let selected=0;
+let selected=0,lastTapTime=0;
 const inv=document.getElementById("inventory");
-let lastTapTime=0;
 
-function parseStack(item){
- if(!item)return{name:"",count:0};
- const match=item.match(/^(.+)x(\d+)$/);
- if(match)return{name:match[1],count:parseInt(match[2])};
- return {name:item,count:1};
-}
+function parseStack(item){if(!item)return{name:"",count:0};const match=item.match(/^(.+)x(\d+)$/);if(match)return{name:match[1],count:parseInt(match[2])};return{name:item,count:1};}
 
 function slotTap(index){
-  const {name,count}=parseStack(inventory[index]);
-  selected = index;
-  renderInv();
-  updateRod();
-
-  // Handle fish preview and sell
-  if(!name || name==="Rod" || name==="Sun Rod" || name==="Bait") return;
-
-  const now=Date.now();
-  if(lastTapTime && now-lastTapTime<500 && selected===index){
-    // Double tap → sell
-    money += prices[name]||0;
-    document.getElementById("money").textContent="$"+money;
-    if(count>1) inventory[index]=name+"x"+(count-1);
-    else inventory[index]="";
-    renderInv();
-    lastTapTime=0;
-  }else{
-    // Single tap → preview
-    msg.style.display="block";
-    msg.textContent=name+" (tap again to sell)";
-    setTimeout(()=>{msg.style.display="none"},1000);
-    lastTapTime=now;
-  }
+ const {name,count}=parseStack(inventory[index]);
+ selected=index; renderInv(); updateRod();
+ if(!name || name==="Rod"||name==="Sun Rod"||name==="Bait") return;
+ const now=Date.now();
+ if(lastTapTime && now-lastTapTime<500 && selected===index){
+   money+=prices[name]||0;
+   document.getElementById("money").textContent="$"+money;
+   if(count>1) inventory[index]=name+"x"+(count-1); else inventory[index]="";
+   renderInv();
+   lastTapTime=0;
+ } else {
+   msg.style.display="block";
+   msg.textContent=name+" (tap again to sell)";
+   setTimeout(()=>{msg.style.display="none"},1000);
+   lastTapTime=now;
+ }
 }
 
-function renderInv(){
- inv.innerHTML="";
- inventory.forEach((it,i)=>{
-   const d=document.createElement("div");
-   d.className="slot"+(i===selected?" active":"");
-   d.textContent=it;
-   d.onclick=()=>slotTap(i);
-   inv.appendChild(d);
- });
-}
+function renderInv(){inv.innerHTML="";inventory.forEach((it,i)=>{const d=document.createElement("div");d.className="slot"+(i===selected?" active":"");d.textContent=it;d.onclick=()=>slotTap(i);inv.appendChild(d);});}
 renderInv();
 
-/* ROD */
+// Rod
 let rod=null;
 function updateRod(){
  if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){
-   if(!rod){
-     rod=new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1),new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513}));
-     rod.position.set(.3,-.4,-1);
-     rod.rotation.z=Math.PI/4;
-     camera.add(rod);
-   }else{
-     rod.material.color.set(inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513);
-   }
- }else if(rod){camera.remove(rod);rod=null;}
+   if(!rod){rod=new THREE.Mesh(new THREE.CylinderGeometry(.02,.02,1),new THREE.MeshStandardMaterial({color:inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513}));
+ rod.position.set(.3,-.4,-1);rod.rotation.z=Math.PI/4;camera.add(rod);}
+ else rod.material.color.set(inventory[selected]==="Sun Rod"?0xffcc00:0x8b4513);
+ } else if(rod){camera.remove(rod);rod=null;}
 }
 
-/* ORB CLICK → SHOP */
-const raycaster=new THREE.Raycaster();
-const touchVec=new THREE.Vector2();
-const shop=document.getElementById("shop");
-
-addEventListener("touchstart",e=>{
- touchVec.x=(e.touches[0].clientX/innerWidth)*2-1;
- touchVec.y=-(e.touches[0].clientY/innerHeight)*2+1;
- raycaster.setFromCamera(touchVec,camera);
- if(raycaster.intersectObject(orb).length){
-  shop.style.display="block";
- }
-});
-
-/* SHOP BUTTONS */
-buySunRod.onclick=()=>{
- if(money<1000)return alert("Not enough money");
- for(let i=0;i<inventory.length;i++){
-  if(inventory[i]==="Rod"){inventory[i]="Sun Rod"; renderInv(); money-=1000; document.getElementById("money").textContent="$"+money; return;}
- }
- for(let i=0;i<inventory.length;i++){
-  if(inventory[i]===""){inventory[i]="Sun Rod"; money-=1000; document.getElementById("money").textContent="$"+money; renderInv(); return;}
- }
- alert("Inventory full!");
-};
-
-buyBait.onclick=()=>{
- if(money<25)return alert("Not enough money");
- for(let i=0;i<inventory.length;i++){
-  if(inventory[i]===""){inventory[i]="Bait"; money-=25; document.getElementById("money").textContent="$"+money; renderInv(); return;}
- }
- alert("Inventory full!");
-};
-
-/* ===== REACTION-TIME MINI-GAME FISHING ===== */
+// Reaction-time fishing mini-game
 let holding=false, holdTime=0, fishing=false, taps=0, requiredTaps=10, fishButton=null, fishTimer=null;
-
-addEventListener("touchstart",()=>{if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){if(!fishing){holding=true; holdTime=0}}});
-addEventListener("touchend",()=>{holding=false; holdTime=0});
+addEventListener("touchstart",()=>{if(inventory[selected]==="Rod"||inventory[selected]==="Sun Rod"){if(!fishing){holding=true;holdTime=0}}});
+addEventListener("touchend",()=>{holding=false; holdTime=0;});
 
 function randomFish(){
- const r=Math.random();
- let fish="";
+ const r=Math.random(); let fish="";
  if(r<1/50) fish="Megalodon";
  else if(r<1/25) fish="MantaRay";
  else if(r<1/5) fish="SeaTurtle";
@@ -385,100 +334,51 @@ function randomFish(){
  else if(r<0.58) fish="Tuna";
  else if(r<0.83) fish="Clownfish";
  else fish="Shark";
-
- if(inventory[selected]==="Sun Rod" && Math.random()<0.5){
-  const rarities=["Megalodon","MantaRay","SeaTurtle"];
-  fish=rarities[Math.floor(Math.random()*rarities.length)];
- }
+ if(inventory[selected]==="Sun Rod"&&Math.random()<0.5){const rarities=["Megalodon","MantaRay","SeaTurtle"];fish=rarities[Math.floor(Math.random()*rarities.length)];}
  return fish;
 }
 
-function addItem(f){
- for(let i=0;i<inventory.length;i++){
-   const {name,count}=parseStack(inventory[i]);
-   if(name===f){inventory[i]=name+"x"+(count+1); renderInv(); return;}
- }
- for(let i=0;i<inventory.length;i++){
-   if(inventory[i]===""){inventory[i]=f; renderInv(); return;}
- }
- alert("Inventory full!");
-}
+function addItem(f){for(let i=0;i<inventory.length;i++){const {name,count}=parseStack(inventory[i]);if(name===f){inventory[i]=name+"x"+(count+1);renderInv();return;}}for(let i=0;i<inventory.length;i++){if(inventory[i]===""){inventory[i]=f;renderInv();return;}}alert("Inventory full!");}
 
 function createFishButton(){
  if(fishButton) document.body.removeChild(fishButton);
  fishButton=document.createElement("button");
- fishButton.textContent="PRESS HERE!";
- fishButton.style.position="fixed";
- fishButton.style.zIndex="100";
- fishButton.style.padding="12px 20px";
- fishButton.style.fontSize="18px";
- fishButton.style.borderRadius="8px";
- fishButton.style.background="yellow";
- fishButton.style.color="black";
- const x=Math.random()*(window.innerWidth-150);
- const y=Math.random()*(window.innerHeight-60);
- fishButton.style.left=x+"px";
- fishButton.style.top=y+"px";
+ fishButton.className="fish-btn";
+ fishButton.textContent="Press Here x"+(taps+1);
+ const x=Math.random()*(window.innerWidth-100);
+ const y=Math.random()*(window.innerHeight-100);
+ fishButton.style.left=x+"px"; fishButton.style.top=y+"px";
  document.body.appendChild(fishButton);
 }
 
 function startFishing(){
- fishing=true;
- holding=false;
- holdTime=0;
- taps=0;
- msg.style.display="block";
- msg.textContent="Casting...";
- const castDelay = 1000 + Math.random()*1500;
-
+ fishing=true; holding=false; holdTime=0; taps=0; msg.style.display="block"; msg.textContent="Casting...";
  setTimeout(()=>{
    const fish=randomFish();
    msg.textContent=fish+"! Catch it by pressing the button!";
-   
-   function failFish(){
-     msg.textContent="Fish escaped!";
-     fishing=false;
-     if(fishButton) document.body.removeChild(fishButton);
-     fishButton=null;
-     clearTimeout(fishTimer);
-     setTimeout(()=>{msg.style.display="none"},2000);
-   }
-
+   function failFish(){msg.textContent="Fish escaped!"; fishing=false; if(fishButton) document.body.removeChild(fishButton); fishButton=null; clearTimeout(fishTimer); setTimeout(()=>{msg.style.display="none"},2000);}
    function nextTap(){
-     if(taps>=requiredTaps){
-       msg.textContent="Caught "+fish+"!";
-       addItem(fish);
-       fishing=false;
-       if(fishButton) document.body.removeChild(fishButton);
-       fishButton=null;
-       clearTimeout(fishTimer);
-       setTimeout(()=>{msg.style.display="none"},2000);
-       return;
-     }
+     if(taps>=requiredTaps){msg.textContent="Caught "+fish+"!"; addItem(fish); fishing=false; if(fishButton) document.body.removeChild(fishButton); fishButton=null; clearTimeout(fishTimer); setTimeout(()=>{msg.style.display="none"},2000);return;}
      createFishButton();
      fishTimer=setTimeout(failFish,1000);
      fishButton.onclick=()=>{
-       taps++;
-       clearTimeout(fishTimer);
-       if(fishButton) document.body.removeChild(fishButton);
-       fishButton=null;
+       taps++; clearTimeout(fishTimer);
+       if(fishButton) document.body.removeChild(fishButton); fishButton=null;
        nextTap();
-     }
+     };
    }
-
    nextTap();
- }, castDelay);
+ },1000+Math.random()*1500);
 }
 
-/* BOOK */
+// Book
 book.onclick=()=>rules.style.display="block";
 
-/* ===== LOGIN FEATURE ===== */
+// Login system
 const loginDiv=document.getElementById("login");
 const usernameInput=document.getElementById("username");
 const loginBtn=document.getElementById("loginBtn");
 let username=null;
-
 function loadPlayerData(name){
  const data=localStorage.getItem("fishingGame_"+name);
  if(data){
@@ -490,12 +390,7 @@ function loadPlayerData(name){
  document.getElementById("money").textContent="$"+money;
  renderInv();
 }
-
-function savePlayerData(){
- if(!username)return;
- localStorage.setItem("fishingGame_"+username,JSON.stringify({money,inventory,selected}));
-}
-
+function savePlayerData(){if(!username)return; localStorage.setItem("fishingGame_"+username,JSON.stringify({money,inventory,selected}));}
 loginBtn.onclick=()=>{
  const name=usernameInput.value.trim();
  if(!name)return alert("Enter a username");
@@ -504,32 +399,34 @@ loginBtn.onclick=()=>{
  loginDiv.style.display="none";
  savePlayerData();
 };
-
 setInterval(savePlayerData,5000);
 
-/* ===== LOOP ===== */
+// Shop buttons
+buySunRod.onclick=()=>{
+ if(money<1000)return alert("Not enough money");
+ for(let i=0;i<inventory.length;i++){if(inventory[i]==="Rod"){inventory[i]="Sun Rod"; renderInv(); money-=1000; document.getElementById("money").textContent="$"+money; return;}}
+ for(let i=0;i<inventory.length;i++){if(inventory[i]===""){inventory[i]="Sun Rod"; money-=1000; document.getElementById("money").textContent="$"+money; renderInv(); return;}}
+ alert("Inventory full!");
+};
+buyBait.onclick=()=>{
+ if(money<25)return alert("Not enough money");
+ for(let i=0;i<inventory.length;i++){if(inventory[i]===""){inventory[i]="Bait"; money-=25; document.getElementById("money").textContent="$"+money; renderInv(); return;}}
+ alert("Inventory full!");
+};
+
+// Main loop
 function animate(){
  requestAnimationFrame(animate);
  updateRod();
-
  camera.rotation.order="YXZ";
- camera.rotation.y=yaw;
- camera.rotation.x=pitch;
-
+ camera.rotation.y=yaw; camera.rotation.x=pitch;
  const f=new THREE.Vector3(Math.sin(yaw),0,Math.cos(yaw));
  const r=new THREE.Vector3(f.z,0,-f.x);
  player.position.add(f.multiplyScalar(moveZ*.15));
  player.position.add(r.multiplyScalar(moveX*.15));
-
- velocityY-=.01;
- player.position.y+=velocityY;
+ velocityY-=.01; player.position.y+=velocityY;
  if(player.position.y<=3){player.position.y=3;velocityY=0;grounded=true;}
-
- if(holding&&!fishing){
-  holdTime+=.016;
-  if(holdTime>=2){startFishing();holding=false;}
- }
-
+ if(holding&&!fishing){holdTime+=.016; if(holdTime>=2){startFishing();holding=false;}}
  renderer.render(scene,camera);
 }
 animate();
